--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
-    "mongoose": "^6.2.9"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.3.5",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
