--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ SECRET = 'hdfgiurgnarwgbaer'
 MAIL_PASS = "lxghclztljfkiksb"
 
 TEST_MAIL = 'julianespa12@gmail.com'
+
+TWILIO_SID = 'AC5a088c7a25365fcfc30760104c67096f'
+
+TWILIO_TOKEN = '0241ead904179323917bef4333023a62'
