--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.8",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
+    "minimist": "^1.2.6",
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
