--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^2.0.0-18",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
+    "log4js": "^6.5.2",
     "minimist": "^1.2.6",
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
